2015-06-23

	* version 3.5.0beta3

2015-06-22

	* src/addressbook.c: disabled autto expand of columns because it
	  conflicts with column sizes settings.

2015-02-06

	* libsylph/utils.c: _s_tempnam(): memory allocated by _wtempnam()
	  must be freed by MSVCRT, not by GLib (thanks to Gisle Vanem).

2015-01-16

	* src/gtkutils.c: gtkut_text_buffer_insert_with_tag_by_name():
	  guard against the case of len == 0 (#215).

2015-01-16

	* src/mainwindow.c: main_window_window_state_cb():
	  win32: fixed a bug that maximized state was unset on minimize.

2014-12-12

	* libsylph/procmime.[ch]
	  libsylph/libsylph-0.def
	  src/mimeview.c: made file names generated on opening attachments
	  more user-friendly.

2014-12-12

	* src/mainwindow.c: main_window_window_state_cb(): added more debug
	  print.

2014-12-09

	* src/prefs_filter.c: fixed a bug that reorder by DnD was not saved.

2014-11-20

	* version 3.5.0beta2

2014-11-20

	* libsylph/recv.c
	  src/quick_search.[ch]
	  src/logwindow.c
	  src/foldersel.c
	  src/message_search.[ch]
	  src/main.c
	  src/alertpanel.c
	  src/inputdialog.c
	  src/export.c
	  src/filesel.c
	  src/account_dialog.c
	  src/import.c
	  src/mainwindow.c
	  src/prefs_filter_edit.c
	  src/prefs_filter.c: updated copyright year.

2014-11-20

	* po/he.po: added Hebrew translation.

2014-11-14

	* nsis/sylpheed-defs.nsh
	  nsis/sylpheed.nsi: updated NSIS scripts.

2014-11-13

	* src/quick_search.c
	  src/message_search.c
	  src/account_dialog.c: made widget sizes dpi-aware.

2014-11-13

	* src/gtkutils.c
	  src/alertpanel.c
	  src/inputdialog.c: made widget spacings dpi-aware.

2014-11-13

	* src/gtkutils.[ch]
	  src/main.c: added command line option '--dpi dpinum'
	  (mainly for debugging).

2014-11-13

	* src/inputdialog.c
	  src/export.c
	  src/import.c: made more dialogs size DPI-aware.

2014-11-12

	* src/sylpheed.rc.in
	  src/Makefile.am
	  src/sylpheed.exe.manifest: win32: added manifest to make
	  sylpheed.exe dpi-aware.

2014-11-11
