@@ -15,7 +15,7 @@ BEGIN
             VALUE "FileDescription", "Sylpheed\0"
             VALUE "FileVersion", "@MAJOR_VERSION@.@MINOR_VERSION@.@MICRO_VERSION@.@BUILD_REVISION@\0"
             VALUE "InternalName", "sylpheed\0"
-            VALUE "LegalCopyright", "Copyright (C) 1999-2014 Hiroyuki Yamamoto\0"
+            VALUE "LegalCopyright", "Copyright (C) 1999-2015 Hiroyuki Yamamoto\0"
             VALUE "OriginalFilename", "sylpheed.exe\0"
             VALUE "ProductName", "Sylpheed\0"
             VALUE "ProductVersion", "@VERSION@\0"
