@@ -1,6 +1,11 @@
-2015-06-23
+2015-06-24
 
 	* version 3.5.0beta3
+
+2015-06-24
+
+	* src/about.c
+	  src/sylpheed.rc.in: updated copyright year.
 
 2015-06-22
 
